--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,7 @@
   "description": "Server for Biblioteca Project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node_modules/.bin/nodemon index.js",
-    "dev": "node_modules/.bin/nodemon index.js"
+    "server": "nodemon index.js"
   },
   "author": "Saqib Jallal",
   "license": "ISC",
